tests/ui/non_enum.stderr
error: input must be an enum
 --> tests/ui/non_enum.rs:3:10
  |
3 | #[derive(SerializeStringEnum, DeserializeStringEnum)]
  |          ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SerializeStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: input must be an enum
 --> tests/ui/non_enum.rs:3:31
  |
3 | #[derive(SerializeStringEnum, DeserializeStringEnum)]
  |                               ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserializeStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
